# EmTools

./: CMakeLists.txt  README.md  emconfig.bat
em-appdata/: CMakeLists.txt  DriveAppData.cpp  DriveAppData.h  drive_appdata.js
em-drive/: CMakeLists.txt  Drive.cpp  Drive.h  drive.js
em-main/: CMakeLists.txt  emscripten.js  index.js  loader.js  package.json  webpack.config.js
em-main/html/: test_index.html
em-main/html/js/: drive.js
em-test/: CMakeLists.txt  test_entry.js
em-utils/: CMakeLists.txt  Idb.cpp  Idb.h
html/: index.html  test_index.html
js/: drive_appdata.js
src/: DriveAppData.cpp  DriveAppData.h
test/: CMakeLists.txt  main.cpp  server.bat
test/html/: drive.js  drive_appdata.js  drive_test.js  index.html  server.bat
test/js/: drive_test.js
test/ts/: test.ts
